--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -9,5 +9,12 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Página de categorias</p>
+  <ion-list>
+    <button ion-item *ngFor="let cat of catList">
+      <ion-thumbnail item-start>
+        <img src="" alt="">
+      </ion-thumbnail>
+      <h2>{{ cat.nome }}</h2>
+    </button>
+  </ion-list>
 </ion-content>
